[package]
name = "sqlx-bulk"
version = "0.0.1"
authors = ["dyoshikawa <dyoshikawa@gmail.com>"]
edition = "2018"
keywords = ["sqlx", "bulk insert", "sql"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
tokio = { version = "0.2", features = ["full"] }
