[package]
name = "bulk-sql-rs"
version = "0.0.1"
authors = ["dyoshikawa <dyoshikawa@gmail.com>"]
edition = "2018"
keywords = ["bulk insert", "sql"]
description = "Generation a sql for bulk insert."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
